--- a/testPro/templates/index.html
+++ b/testPro/templates/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
 
-		<title> SmartAdmin </title>
+		<title> AutoHome </title>
 		<meta name="description" content="">
 		<meta name="author" content="">
 			
@@ -63,7 +63,7 @@
 
 				<!-- PLACE YOUR LOGO HERE -->
 				<!--span id="logo"> <img src="/static/img/logo.png" alt="SmartAdmin"> </span-->
-				<span id="logo" style="font-size:15px;font-weight:bold;text-shadow:1px 1px 1px white"> AUTH全网监控工具</span>
+				<span id="logo" style="font-size:15px;font-weight:bold;text-shadow:1px 1px 1px white"> AutoHome全网监控工具</span>
 				<!-- END LOGO PLACEHOLDER -->
 
 				
@@ -88,7 +88,7 @@
 
 				<!-- logout button -->
 				<div id="logout" class="btn-header transparent pull-right">
-					<span> <a href="login.html" title="Sign Out" data-logout-msg="You can improve your security further after logging out by closing this opened browser"><i class="fa fa-power-off"></i></a> </span>
+					<span> <a href="/logout/" title="Sign Out" data-logout-msg="确认要退出吗？"><i class="fa fa-power-off"></i></a> </span>
 				</div>
 				<!-- end logout button -->
 
@@ -158,7 +158,7 @@
 							</li>
 						</ul>
 					</li>
-					<li>
+					<!--li>
 						<a href=""><i class="fa fa-lg fa-fw fa-sitemap"></i> <span class="menu-item-parent">资产</span></a>
 						<ul>
 							<li>
@@ -221,7 +221,7 @@
 					<li>
 
 						<a href="/static/ajax/inbox.html"><i class="fa fa-lg fa-fw fa-flask"></i> <span class="menu-item-parent">日志</span><span class="badge pull-right inbox-badge">14</span></a>
-					</li>
+					</li-->
 					<li>
 					
 						<a href="ajax/"><i class="fa fa-lg fa-fw fa-wrench"></i> <span class="menu-item-parent">配置</span></a>
@@ -447,6 +447,8 @@
 
 		<!-- JS TOUCH : include this plugin for mobile drag / drop touch events
 		<script src="/static/js/plugin/jquery-touch/jquery.ui.touch-punch.min.js"></script> -->
+		<!--easy redirect-->
+		<script src="/static/js/redirect.js"></script>
 
 		<!-- BOOTSTRAP JS -->
 		<script src="/static/js/bootstrap/bootstrap.min.js"></script>
@@ -514,7 +516,6 @@
 		<!--highStock-->
 		<script src="/static/highstock/js/highstock.js"></script>
 		<script src="/static/highstock/js/modules/exporting.js"></script>
-		<!--easy dialog-->
 		
 
 	</body>
