--- a/testPro/templates/login.html
+++ b/testPro/templates/login.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
 
-		<title> SmartAdmin </title>
+		<title> 全网监控工具 </title>
 		<meta name="description" content="">
 		<meta name="author" content="">
 
@@ -17,22 +17,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<!-- Basic Styles -->
-		<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">	
-		<link rel="stylesheet" type="text/css" media="screen" href="css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/static/css/bootstrap.min.css">	
+		<link rel="stylesheet" type="text/css" media="screen" href="/static/css/font-awesome.min.css">
 
 		<!-- SmartAdmin Styles : Please note (smartadmin-production.css) was created using LESS variables -->
-		<link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-production.css">
-		<link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-skins.css">	
+		<link rel="stylesheet" type="text/css" media="screen" href="/static/css/smartadmin-production.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/static/css/smartadmin-skins.css">	
 		
 		<!-- SmartAdmin RTL Support is under construction
 			<link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-rtl.css"> -->
 		
-		<!-- Demo purpose only: goes with demo.js, you can delete this css when designing your own WebApp -->
-		<link rel="stylesheet" type="text/css" media="screen" href="css/demo.css">
 
 		<!-- FAVICONS -->
-		<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="img/favicon/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/static/img/favicon/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/static/img/favicon/favicon.ico" type="image/x-icon">
 
 		<!-- GOOGLE FONT -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,400,700">
@@ -40,18 +38,7 @@
 	</head>
 	<body id="login" class="animated fadeInDown">
 		<!-- possible classes: minified, no-right-panel, fixed-ribbon, fixed-header, fixed-width-->
-		<header id="header">
-			<!--<span id="logo"></span>-->
-
-			<div id="logo-group">
-				<span id="logo"> <img src="img/logo.png" alt="SmartAdmin"> </span>
-
-				<!-- END AJAX-DROPDOWN -->
-			</div>
-
-			<span id="login-header-space"> <span class="hidden-mobile">Need an account?</span> <a href="register.html" class="btn btn-danger">Creat account</a> </span>
-
-		</header>
+		<br><br>
 
 		<div id="main" role="main">
 
@@ -60,42 +47,42 @@
 
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 hidden-xs hidden-sm">
-						<h1 class="txt-color-red login-header-big">SmartAdmin</h1>
-						<div class="hero">
+						<h1 class="txt-color-red login-header-big">AutoHome 全网监控工具</h1>
+						<div >
 
-							<div class="pull-left login-desc-box-l">
-								<h4 class="paragraph-header">It's Okay to be Smart. Experience the simplicity of SmartAdmin, everywhere you go!</h4>
-								<div class="login-app-icons">
+							<div class="pull-left ">
+								<h4 class="paragraph-header">How is the speed of you website? let the data speak.</h4>
+								<!--div class="login-app-icons">
 									<a href="javascript:void(0);" class="btn btn-danger btn-sm">Frontend Template</a>
 									<a href="javascript:void(0);" class="btn btn-danger btn-sm">Find out more</a>
-								</div>
+								</div-->
 							</div>
 							
-							<img src="img/demo/iphoneview.png" class="pull-right display-image" alt="" style="width:210px">
+							
 
 						</div>
 
-						<div class="row">
+						<!--div class="row pull-left">
 							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<h5 class="about-heading">About SmartAdmin - Are you up to date?</h5>
+								<h5 class="about-heading">Produly powered by the IT Automation Team</h5>
 								<p>
-									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.
+									汽车之家｜运维部｜自动化组 <hr>技术支持:lijie@autohome.com.cn
 								</p>
 							</div>
-							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+							<!--div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 								<h5 class="about-heading">Not just your average template!</h5>
 								<p>
 									Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi voluptatem accusantium!
 								</p>
-							</div>
-						</div>
+							</div-->
+						</div-->
 
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
 						<div class="well no-padding">
-							<form action="index.html" id="login-form" class="smart-form client-form">
+							<form action="/login_auth/"  id="login-form" class="smart-form client-form" method="post">
 								<header>
-									Sign In
+									登录
 								</header>
 
 								<fieldset>
@@ -114,25 +101,27 @@
 											<b class="tooltip tooltip-top-right"><i class="fa fa-lock txt-color-teal"></i> Enter your password</b> </label>
 										<div class="note">
 											<a href="forgotpassword.html">Forgot password?</a>
+											<br><br>
+											<p class="btn-warning">{{login_err}}</p>
 										</div>
 									</section>
 
 									<section>
-										<label class="checkbox">
+										<!--label class="checkbox">
 											<input type="checkbox" name="remember" checked="">
 											<i></i>Stay signed in</label>
-									</section>
+									</section-->
 								</fieldset>
 								<footer>
 									<button type="submit" class="btn btn-primary">
-										Sign in
+										登录
 									</button>
 								</footer>
 							</form>
 
 						</div>
 						
-						<h5 class="text-center"> - Or sign in using -</h5>
+						<!--h5 class="text-center"> - Or sign in using -</h5>
 															
 										<ul class="list-inline text-center">
 											<li>
@@ -144,18 +133,19 @@
 											<li>
 												<a href="javascript:void(0);" class="btn btn-warning btn-circle"><i class="fa fa-linkedin"></i></a>
 											</li>
-										</ul>
+										</ul-->
 						
 					</div>
 				</div>
+				<hr>
+				<h6> Produly Powered By The Automation Team Of IT Operation Department </h6>
 			</div>
 
 		</div>
 
 		<!--================================================== -->	
 
-		<!-- PACE LOADER - turn this on if you want ajax loading to show (caution: uses lots of memory on iDevices)-->
-		<script src="js/plugin/pace/pace.min.js"></script>
+
 
 	    <!-- Link to Google CDN's jQuery + jQueryUI; fall back to local -->
 	    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -164,41 +154,17 @@
 	    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 		<script> if (!window.jQuery.ui) { document.write('<script src="js/libs/jquery-ui-1.10.3.min.js"><\/script>');} </script>
 
-		<!-- JS TOUCH : include this plugin for mobile drag / drop touch events 		
-		<script src="js/plugin/jquery-touch/jquery.ui.touch-punch.min.js"></script> -->
+
 
 		<!-- BOOTSTRAP JS -->		
-		<script src="js/bootstrap/bootstrap.min.js"></script>
+		<script src="/static/js/bootstrap/bootstrap.min.js"></script>
 
-		<!-- CUSTOM NOTIFICATION -->
-		<script src="js/notification/SmartNotification.min.js"></script>
 
-		<!-- JARVIS WIDGETS -->
-		<script src="js/smartwidgets/jarvis.widget.min.js"></script>
-		
-		<!-- EASY PIE CHARTS -->
-		<script src="js/plugin/easy-pie-chart/jquery.easy-pie-chart.min.js"></script>
-		
-		<!-- SPARKLINES -->
-		<script src="js/plugin/sparkline/jquery.sparkline.min.js"></script>
 		
 		<!-- JQUERY VALIDATE -->
-		<script src="js/plugin/jquery-validate/jquery.validate.min.js"></script>
+		<script src="/static/js/plugin/jquery-validate/jquery.validate.min.js"></script>
 		
-		<!-- JQUERY MASKED INPUT -->
-		<script src="js/plugin/masked-input/jquery.maskedinput.min.js"></script>
-		
-		<!-- JQUERY SELECT2 INPUT -->
-		<script src="js/plugin/select2/select2.min.js"></script>
 
-		<!-- JQUERY UI + Bootstrap Slider -->
-		<script src="js/plugin/bootstrap-slider/bootstrap-slider.min.js"></script>
-		
-		<!-- browser msie issue fix -->
-		<script src="js/plugin/msie-fix/jquery.mb.browser.min.js"></script>
-		
-		<!-- FastClick: For mobile devices -->
-		<script src="js/plugin/fastclick/fastclick.js"></script>
 		
 		<!--[if IE 7]>
 			
@@ -207,7 +173,7 @@
 		<![endif]-->
 
 		<!-- MAIN APP JS FILE -->
-		<script src="js/app.js"></script>
+		<script src="/static/js/app.js"></script>
 
 		<script type="text/javascript">
 			runAllForms();
